add defensive tree cache handling for workspace (re)initialization